<resources>
    <string name="app_name">Squad Master</string>
    <string name="search">Search</string>

    //ALERT DIALOG
    <string name="info">Info</string>
    <string name="error">Error</string>
    <string name="warning">Warning</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="correct_answer">Correct Answer</string>
    <string name="wrong_answer">Wrong Answer</string>
    <string name="try_again">Try Again</string>
    <string name="back">Back</string>

    <string name="home">Home</string>
    <string name="leagues">Leagues</string>
    <string name="tournaments">Tournaments</string>
    <string name="score">Score</string>
    <string name="settings">Settings</string>

    <string name="start_game">Start Game</string>
    <string name="next_level">Next Level</string>
    <string name="restart">Restart</string>
    <string name="continue_with_life">Continue (+1 Life)</string>
    <string name="game_over">Game Over</string>
    <string name="yellow_card">Yellow Card</string>

    <string name="formatted_score">Score: %1$s</string>
    <string name="formatted_wrong_answer">Unfortunately, the correct answer is not %1$s. Try again to get points.</string>
    <string name="insufficient_score">Unsufficient point.</string>
    <string name="total_score">Best Score: %1$s \n \n Total Score: %2$s</string>

    <string name="name">*Name</string>
    <string name="surname">Surname</string>
    <string name="username">*User Name</string>
    <string name="email">*E-Mail</string>
    <string name="password">*Password</string>

    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="or">or</string>
    <string name="login_as_guest">Login as Guest</string>
    <string name="login_with_google">Login with Google</string>
    <string name="login_as_guest_description">If you login as a guest, your scores will not be recorded and you will be deprived of many services such as not being able to compete with other users.</string>
    <string name="txt_continue">Continue</string>
    <string name="logout">Sign Out</string>
    <string name="quit_game">Quit Game</string>
    <string name="used_username">Since this username is in use, you need to choose a different username.</string>

    <string name="remember_me">Remember Me</string>
    <string name="yellow_card_description">The next wrong answer will be game over.</string>
    <string name="score_not_save_reminder">If you exit the game, your score will not be saved.</string>
    <string name="back_to_main_menu">Back to Main Menu</string>
    <string name="back_to_menu_description">You are directed to the main menu without receiving points.</string>
    <string name="game_close_alert">The game will be closed. Are you sure?</string>
    <string name="logout_alert">The user will be logged out. Are you sure?</string>
    <string name="close_game">Close Game</string>
    <string name="select_answer">Select Answer</string>

    <string name="show_flag">Show Player\'s Country</string>
    <string name="show_number">Show Player\'s Number</string>
    <string name="show_flag_description">The player\'s country will be displayed for 20 points. Do you confirm?</string>
    <string name="show_number_description">The player\'s number will be displayed for 20 points. Do you confirm?</string>

    <string name="show_score">Login or register to compete with other users.</string>
    <string name="show_league">Login or register to play league mode.</string>
    <string name="login_or_register">Login or Register</string>

    <string name="competitive_mode">Main Game</string>
    <string name="online_mode">Online Mode</string>
    <string name="league_mode">Tournament Mode</string>
    <string name="rank_list_by_best_scores">Best Scores</string>
    <string name="rank_list_by_total_points">Total Points</string>
    <string name="high_score">High Score Table</string>

    <string name="best_score">Best Score</string>
    <string name="total_point">Total Point</string>

    <string name="language">Language</string>
    <string name="theme">Theme</string>
    <string name="about">About</string>
    <string name="remember_me_reminder">You can be directed to the homepage the next time you log in to the application by checking the Remember Me option.</string>

    <string name="name_empty_warning">Please enter your name.</string>
    <string name="username_empty_warning">Please enter your username.</string>
    <string name="password_empty_warning">Please enter your password.</string>
    <string name="email_empty_warning">Please enter your e-mail.</string>

    <string name="club_is_passed">You have already completed this club.</string>
    <string name="membership">I have read and approve the membership agreement.</string>
    <string name="password_validation">Your password must contain at least 1 uppercase, 1 lowercase, 1 digit character and must be at least 8 characters.</string>
    <string name="slide_first_main_mode">Only one player is missing in the first 11 and try to find the correct answer from the 5 answers!</string>
    <string name="slide_two_league_mode">Compete to unlock all leagues in the league mode, which consists of teams from Europe\'s 5 big leagues, Turkish League and other leagues.</string>
    <string name="slide_third_score">Compete fiercely on the overall scoreboard with the main game mode record.</string>
    <string name="point_15">15 Point won!</string>
    <string name="point_25">25 Point won!</string>
    <string name="point_50">50 Point won!</string>
    <string name="club_unlocked">Club Unlocked</string>
    <string name="all_clubs_finished">All Clubs Passed In This Tournament</string>

    <string name="need_point">You need %2$s points to unlock %1$s. You can earn point by play main game mode.</string>
    <string name="watch_and_earn">You can also earn 50 points by watching ads.</string>
    <string name="watch_ad">Earn 50 Point</string>

    <string name="is_not_online">Maintenance work is in progress. Please try again later.</string>
    <string name="new_version_title">New Version Is Out!</string>
    <string name="new_version_available">New version available. You can go to the store by click button.</string>
    <string name="download">Download</string>
    <string name="coming_soon">Coming soon…</string>

    <string name="socket_timeout_exception">Timeout - Please check your internet connection.</string>
    <string name="unknown_host_exception">Unable to make a connection. Please check your internet.</string>
    <string name="connection_shutdown_exception">Connection shutdown. Please check your internet.</string>
    <string name="io_exception">Server is unreachable, please try again later.</string>
    <string name="internet_connection_problem">Internet connection error!</string>
    <string name="rival_disconnect">Rival left session!</string>
    <string name="match_start">Match started!</string>
    <string name="rival_is_not_found">Rival is not found!</string>
    <string name="online_loss_match">If you leave the game, your opponent will win the game.</string>
    <string name="user_left_game">%1$s kullanıcısı oyundan ayrıldı.</string>
    <string name="user_joined_game">%1$s odaya katıldı.</string>
    <string name="answer_waiting">Waiting for opponent\'s answer.</string>
    <string name="disconnect_won_10_point">You\'ve earned 10 points for leaving your opponent out of the game!</string>
    <string name="draw">Tie</string>
    <string name="defeat">Defeat</string>
    <string name="won_and_50_point">Won. 50 points are yours!</string>
    <string name="your_answer">Your Answer</string>
    <string name="rival_answer">Rival\'s Answer</string>
    <string name="waiting_person">Waiting: %1$s</string>
    <string name="clues">Hint Area</string>
    <string name="level_is_passed_description">You found the missing player in this team. You may encounter this team again in adventure mode.</string>
    <string name="music">Music</string>
    <string name="sound">Sound</string>
    <string name="league_unlocked">The league is open for use.</string>
</resources>