<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_two"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingStart="32dp"
    android:paddingEnd="32dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/text_me_one"
        android:gravity="center"
        android:lineSpacingExtra="16dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="48sp"
        android:textStyle="bold" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="32dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="@drawable/bg_ripple_effect"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:backgroundTint="@color/green_two"
        app:cornerRadius="8dp"
        app:strokeColor="@color/white"
        app:strokeWidth="1dp" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/btnGoogleSignIn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_green_with_radius_ten"
        android:foreground="@drawable/bg_ripple_effect" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvDontHaveAnAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/dont_have_an_account"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/green_two"
        android:clickable="true"
        android:focusable="true"
        android:foreground="@drawable/bg_ripple_effect"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:padding="16dp"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:cornerRadius="8dp"
        app:strokeColor="@color/white"
        app:strokeWidth="1dp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvOr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/or"
        android:textAlignment="center"
        android:textColor="@color/white" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLoginAsGuest"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/green_two"
        android:clickable="true"
        android:focusable="true"
        android:foreground="@drawable/bg_ripple_effect"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:padding="16dp"
        android:text="@string/login_as_guest"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:cornerRadius="8dp"
        app:strokeColor="@color/white"
        app:strokeWidth="1dp" />
</LinearLayout>