<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_dialog"
    android:orientation="vertical">

    <View
        android:layout_width="86dp"
        android:layout_height="6dp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:alpha=".11"
        android:background="@drawable/bg_black_with_radius_three" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/sofia_sans"
        android:text="@string/yellow_card"
        android:textColor="@color/yellow"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDescription"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/josefin_sans"
            android:gravity="center_vertical"
            android:lineSpacingExtra="4sp"
            android:padding="16dp"
            android:text="@string/yellow_card_description"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.3"
            android:orientation="vertical">

            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/yellow_card" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnContinue"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_marginTop="-16dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:elevation="0dp"
                android:layout_marginBottom="8dp"
                android:text="@string/txt_continue"
                android:textAllCaps="false"
                android:textColor="@color/black"
                app:backgroundTint="@color/yellow"
                app:cornerRadius="16dp" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>