<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_dialog"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivClose"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_gravity="end|top"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_close"
        android:tint="@color/black" />

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/red_card" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:text="@string/game_over"
        android:textColor="@color/red"
        android:textSize="24sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="2dp"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRestart"
            android:layout_width="144dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginEnd="8dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:padding="8dp"
            android:text="@string/restart"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:backgroundTint="@color/red"
            app:cornerRadius="8dp"
            app:strokeColor="@color/black"
            app:strokeWidth="1dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnContinue"
            android:layout_width="144dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:padding="8dp"
            android:text="@string/continue_with_life"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:backgroundTint="@color/green_two"
            app:cornerRadius="8dp"
            app:strokeColor="@color/black"
            app:strokeWidth="1dp" />

    </LinearLayout>

</LinearLayout>