<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/josefin_sans"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="28sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_marginTop="32dp"
            android:maxLines="1"
            android:text="@string/name"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundMode="none"
            app:boxStrokeColor="@color/white"
            app:boxStrokeWidth="1dp">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/bg_green_with_radius_ten"
            android:fontFamily="@font/sofia_sans"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            android:padding="8dp"
            android:textColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_marginTop="16dp"
            android:maxLines="1"
            android:text="@string/surname"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundMode="none"
            app:boxStrokeColor="@color/white"
            app:boxStrokeWidth="1dp">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etSurname"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/bg_green_with_radius_ten"
            android:fontFamily="@font/sofia_sans"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            android:padding="8dp"
            android:textColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_marginTop="16dp"
            android:maxLines="1"
            android:text="@string/username"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundMode="none"
            app:boxStrokeColor="@color/white"
            app:boxStrokeWidth="1dp">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etUserName"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/bg_green_with_radius_ten"
            android:fontFamily="@font/sofia_sans"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            android:padding="8dp"
            android:textColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_marginTop="16dp"
            android:maxLines="1"
            android:text="@string/email"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundMode="none"
            app:boxStrokeColor="@color/white"
            app:boxStrokeWidth="1dp">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etMail"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/bg_green_with_radius_ten"
            android:fontFamily="@font/sofia_sans"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="8dp"
            android:textColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_marginTop="16dp"
            android:maxLines="1"
            android:text="@string/password"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundMode="none"
            app:boxStrokeColor="@color/white"
            app:boxStrokeWidth="1dp"
            app:endIconDrawable="@drawable/show_password_selector"
            app:endIconMode="password_toggle"
            app:endIconTint="@null">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/bg_green_with_radius_ten"
                android:fontFamily="@font/sofia_sans"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="48dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="@drawable/bg_ripple_effect"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:backgroundTint="@color/green"
            app:cornerRadius="8dp"
            app:strokeColor="@color/white"
            app:strokeWidth="1dp" />
    </LinearLayout>

</ScrollView>